--- a/site/scss/main.scss
+++ b/site/scss/main.scss
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Baloo+2:wght@500&display=swap");
+@import "colors";
 
 .header {
   text-align: center;
@@ -14,14 +15,15 @@
 }
 
 .products-list {
-  border: 1px solid gray;
+  border: 1px solid $primary-color;
   border-radius: 16px;
+  box-shadow: 0 3px 14px $primary-color;
 }
 
 .list-item {
   display: flex;
   height: 200px;
-  border-bottom: 1px solid gray;
+  border-bottom: 1px solid $primary-color;
   &:last-child {
     border-bottom: none;
   }
@@ -39,7 +41,7 @@
     width: 60%;
     padding: 32px 0;
     color: black;
-    border-right: 1px solid gray;
+    border-right: 1px solid $primary-color;
   }
   &__name {
     font-weight: bold;
@@ -48,7 +50,7 @@
   &__description {
     margin-top: 16px;
     font-family: sans-serif;
-    color: gray;
+    color: $primary-text-color;
     font-size: 18px;
   }
   &__options {
@@ -56,5 +58,33 @@
   }
   &__button {
     width: 10%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    &-icon {
+      font-size: 24px;
+      background-size: 32px;
+      transform: scale(1.3);
+    }
   }
+  &__price {
+    margin-top: 16px;
+    font-size: 16px;
+    font-family: sans-serif;
+    color: $primary-text-color;
+  }
+  &__option {
+    padding: 8px 12px;
+    border: 1px solid $primary-color;
+    font-size: 16px;
+  }
+}
+
+.ui-btn {
+  border-width: 0px;
+}
+.ui-btn-active {
+  color: transparent;
+  background-color: transparent;
 }
