--- a/site/css/main.css
+++ b/site/css/main.css
@@ -3,12 +3,20 @@
   text-align: center;
   color: white;
   background-color: red;
-  padding: 24px 0;
+  padding: 12px 0;
+  font-size: 8px;
+}
+
+@media (min-width: 768px) {
+  .header {
+    padding: 16px 0;
+    font-size: 16px;
+  }
 }
 
 .wrapper {
-  padding: 0 24px;
-  padding-top: 36px;
+  padding: 0 12px;
+  padding-top: 24px;
   font-family: "Baloo 2", cursive;
 }
 
@@ -33,27 +41,48 @@
 }
 
 .list-item__img {
-  padding: 16px;
+  width: 30%;
+  border-radius: 32px;
+  object-fit: scale-down;
 }
 
 .list-item__descriptions {
-  margin-left: 16px;
-  width: 60%;
+  margin-left: 8px;
+  width: 50%;
   padding: 32px 0;
   color: black;
   border-right: 1px solid #cfcece;
 }
 
+@media (min-width: 768px) {
+  .list-item__descriptions {
+    padding: 24px 0;
+    margin-left: 16px;
+  }
+}
+
 .list-item__name {
   font-weight: bold;
-  font-size: 30px;
+  font-size: 16px;
+}
+
+@media (min-width: 768px) {
+  .list-item__name {
+    font-size: 24px;
+  }
 }
 
 .list-item__description {
   margin-top: 16px;
   font-family: sans-serif;
   color: gray;
-  font-size: 18px;
+  font-size: 10px;
+}
+
+@media (min-width: 768px) {
+  .list-item__description {
+    font-size: 18px;
+  }
 }
 
 .list-item__options {
@@ -61,24 +90,36 @@
 }
 
 .list-item__button {
-  width: 10%;
   height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-grow: 1;
 }
 
 .list-item__button-icon {
-  font-size: 24px;
+  font-size: 20px;
   background-size: 32px;
   transform: scale(1.3);
 }
 
+@media (min-width: 768px) {
+  .list-item__button-icon {
+    font-size: 32px;
+  }
+}
+
 .list-item__price {
   margin-top: 16px;
-  font-size: 16px;
+  font-size: 10px;
   font-family: sans-serif;
   color: gray;
+}
+
+@media (min-width: 768px) {
+  .list-item__price {
+    font-size: 18px;
+  }
 }
 
 .list-item__option {
