--- a/site/scss/main.scss
+++ b/site/scss/main.scss
@@ -1,16 +1,23 @@
 @import url("https://fonts.googleapis.com/css2?family=Baloo+2:wght@500&display=swap");
 @import "colors";
+@import "breakpoints";
 
 .header {
   text-align: center;
   color: white;
   background-color: red;
-  padding: 24px 0;
+  padding: 12px 0;
+  font-size: 8px;
+
+  @media (min-width: $breakpoint-md) {
+    padding: 16px 0;
+    font-size: 16px;
+  }
 }
 
 .wrapper {
-  padding: 0 24px;
-  padding-top: 36px;
+  padding: 0 12px;
+  padding-top: 24px;
   font-family: "Baloo 2", cursive;
 }
 
@@ -33,46 +40,66 @@
   }
 
   &__img {
-    padding: 16px;
+    width: 30%;
+    border-radius: 32px;
+
+    object-fit: scale-down;
   }
 
   &__descriptions {
-    margin-left: 16px;
-    width: 60%;
+    margin-left: 8px;
+    width: 50%;
     padding: 32px 0;
     color: black;
     border-right: 1px solid $primary-color;
+
+    @media (min-width: $breakpoint-md) {
+      padding: 24px 0;
+      margin-left: 16px;
+    }
   }
   &__name {
     font-weight: bold;
-    font-size: 30px;
+    font-size: 16px;
+    @media (min-width: $breakpoint-md) {
+      font-size: 24px;
+    }
   }
   &__description {
     margin-top: 16px;
     font-family: sans-serif;
     color: $primary-text-color;
-    font-size: 18px;
+    font-size: 10px;
+    @media (min-width: $breakpoint-md) {
+      font-size: 18px;
+    }
   }
   &__options {
     margin-top: 12px;
   }
   &__button {
-    width: 10%;
     height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-grow: 1;
     &-icon {
-      font-size: 24px;
+      font-size: 20px;
       background-size: 32px;
       transform: scale(1.3);
+      @media (min-width: $breakpoint-md) {
+        font-size: 32px;
+      }
     }
   }
   &__price {
     margin-top: 16px;
-    font-size: 16px;
+    font-size: 10px;
     font-family: sans-serif;
     color: $primary-text-color;
+    @media (min-width: $breakpoint-md) {
+      font-size: 18px;
+    }
   }
   &__option {
     padding: 8px 12px;
